// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState component does not render empty state with appropriate base path and no docs 1`] = `
<EmptyStateComponent
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  loading={false}
  statesIndexStatus={
    Object {
      "docCount": 0,
      "indexExists": true,
    }
  }
>
  <DataMissing
    headingMessage="No uptime data found"
  >
    <EuiFlexGroup
      data-test-subj="data-missing"
      justifyContent="center"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        data-test-subj="data-missing"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiSpacer
              size="xs"
            >
              <div
                className="euiSpacer euiSpacer--xs"
              />
            </EuiSpacer>
            <EuiPanel>
              <div
                className="euiPanel euiPanel--paddingMedium"
              >
                <EuiEmptyPrompt
                  body={
                    <p>
                      <FormattedMessage
                        defaultMessage="{configureHeartbeatLink} to start logging uptime data."
                        id="xpack.uptime.dataMissing.configureHeartbeatToGetStartedMessage"
                        values={
                          Object {
                            "configureHeartbeatLink": <ForwardRef
                              href="/app/kibana#/home/tutorial/uptimeMonitors"
                              target="_blank"
                            >
                              <FormattedMessage
                                defaultMessage="Configure Heartbeat"
                                id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                values={Object {}}
                              />
                            </ForwardRef>,
                          }
                        }
                      />
                    </p>
                  }
                  iconType="uptimeApp"
                  title={
                    <EuiTitle
                      size="l"
                    >
                      <h3>
                        No uptime data found
                      </h3>
                    </EuiTitle>
                  }
                >
                  <div
                    className="euiEmptyPrompt"
                  >
                    <EuiIcon
                      color="subdued"
                      size="xxl"
                      type="uptimeApp"
                    >
                      <div
                        color="subdued"
                        data-euiicon-type="uptimeApp"
                        size="xxl"
                      />
                    </EuiIcon>
                    <EuiSpacer
                      size="s"
                    >
                      <div
                        className="euiSpacer euiSpacer--s"
                      />
                    </EuiSpacer>
                    <EuiTextColor
                      color="subdued"
                    >
                      <span
                        className="euiTextColor euiTextColor--subdued"
                      >
                        <EuiTitle>
                          <EuiTitle
                            className="euiTitle euiTitle--medium"
                            size="l"
                          >
                            <h3
                              className="euiTitle euiTitle--large euiTitle euiTitle--medium"
                            >
                              No uptime data found
                            </h3>
                          </EuiTitle>
                        </EuiTitle>
                        <EuiSpacer
                          size="m"
                        >
                          <div
                            className="euiSpacer euiSpacer--m"
                          />
                        </EuiSpacer>
                        <EuiText>
                          <div
                            className="euiText euiText--medium"
                          >
                            <p>
                              <FormattedMessage
                                defaultMessage="{configureHeartbeatLink} to start logging uptime data."
                                id="xpack.uptime.dataMissing.configureHeartbeatToGetStartedMessage"
                                values={
                                  Object {
                                    "configureHeartbeatLink": <ForwardRef
                                      href="/app/kibana#/home/tutorial/uptimeMonitors"
                                      target="_blank"
                                    >
                                      <FormattedMessage
                                        defaultMessage="Configure Heartbeat"
                                        id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                        values={Object {}}
                                      />
                                    </ForwardRef>,
                                  }
                                }
                              >
                                <EuiLink
                                  href="/app/kibana#/home/tutorial/uptimeMonitors"
                                  target="_blank"
                                >
                                  <a
                                    className="euiLink euiLink--primary"
                                    href="/app/kibana#/home/tutorial/uptimeMonitors"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    <FormattedMessage
                                      defaultMessage="Configure Heartbeat"
                                      id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                      values={Object {}}
                                    >
                                      Configure Heartbeat
                                    </FormattedMessage>
                                  </a>
                                </EuiLink>
                                 to start logging uptime data.
                              </FormattedMessage>
                            </p>
                          </div>
                        </EuiText>
                      </span>
                    </EuiTextColor>
                  </div>
                </EuiEmptyPrompt>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </DataMissing>
</EmptyStateComponent>
`;

exports[`EmptyState component doesn't render child components when count is falsy 1`] = `
<EmptyStateComponent
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  loading={false}
  statesIndexStatus={null}
>
  <EmptyStateLoading>
    <EuiEmptyPrompt
      body={
        <React.Fragment>
          <EuiLoadingSpinner
            size="xl"
          />
          <EuiSpacer />
          <EuiTitle
            size="l"
          >
            <h2>
              Loading…
            </h2>
          </EuiTitle>
        </React.Fragment>
      }
    >
      <div
        className="euiEmptyPrompt"
      >
        <EuiTextColor
          color="subdued"
        >
          <span
            className="euiTextColor euiTextColor--subdued"
          >
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                <EuiLoadingSpinner
                  size="xl"
                >
                  <span
                    className="euiLoadingSpinner euiLoadingSpinner--xLarge"
                  />
                </EuiLoadingSpinner>
                <EuiSpacer>
                  <div
                    className="euiSpacer euiSpacer--l"
                  />
                </EuiSpacer>
                <EuiTitle
                  size="l"
                >
                  <h2
                    className="euiTitle euiTitle--large"
                  >
                    Loading…
                  </h2>
                </EuiTitle>
              </div>
            </EuiText>
          </span>
        </EuiTextColor>
      </div>
    </EuiEmptyPrompt>
  </EmptyStateLoading>
</EmptyStateComponent>
`;

exports[`EmptyState component notifies when index does not exist 1`] = `
<EmptyStateComponent
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  loading={false}
  statesIndexStatus={
    Object {
      "docCount": 1,
      "indexExists": false,
    }
  }
>
  <DataMissing
    headingMessage="Uptime index not found"
  >
    <EuiFlexGroup
      data-test-subj="data-missing"
      justifyContent="center"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        data-test-subj="data-missing"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiSpacer
              size="xs"
            >
              <div
                className="euiSpacer euiSpacer--xs"
              />
            </EuiSpacer>
            <EuiPanel>
              <div
                className="euiPanel euiPanel--paddingMedium"
              >
                <EuiEmptyPrompt
                  body={
                    <p>
                      <FormattedMessage
                        defaultMessage="{configureHeartbeatLink} to start logging uptime data."
                        id="xpack.uptime.dataMissing.configureHeartbeatToGetStartedMessage"
                        values={
                          Object {
                            "configureHeartbeatLink": <ForwardRef
                              href="/app/kibana#/home/tutorial/uptimeMonitors"
                              target="_blank"
                            >
                              <FormattedMessage
                                defaultMessage="Configure Heartbeat"
                                id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                values={Object {}}
                              />
                            </ForwardRef>,
                          }
                        }
                      />
                    </p>
                  }
                  iconType="uptimeApp"
                  title={
                    <EuiTitle
                      size="l"
                    >
                      <h3>
                        Uptime index not found
                      </h3>
                    </EuiTitle>
                  }
                >
                  <div
                    className="euiEmptyPrompt"
                  >
                    <EuiIcon
                      color="subdued"
                      size="xxl"
                      type="uptimeApp"
                    >
                      <div
                        color="subdued"
                        data-euiicon-type="uptimeApp"
                        size="xxl"
                      />
                    </EuiIcon>
                    <EuiSpacer
                      size="s"
                    >
                      <div
                        className="euiSpacer euiSpacer--s"
                      />
                    </EuiSpacer>
                    <EuiTextColor
                      color="subdued"
                    >
                      <span
                        className="euiTextColor euiTextColor--subdued"
                      >
                        <EuiTitle>
                          <EuiTitle
                            className="euiTitle euiTitle--medium"
                            size="l"
                          >
                            <h3
                              className="euiTitle euiTitle--large euiTitle euiTitle--medium"
                            >
                              Uptime index not found
                            </h3>
                          </EuiTitle>
                        </EuiTitle>
                        <EuiSpacer
                          size="m"
                        >
                          <div
                            className="euiSpacer euiSpacer--m"
                          />
                        </EuiSpacer>
                        <EuiText>
                          <div
                            className="euiText euiText--medium"
                          >
                            <p>
                              <FormattedMessage
                                defaultMessage="{configureHeartbeatLink} to start logging uptime data."
                                id="xpack.uptime.dataMissing.configureHeartbeatToGetStartedMessage"
                                values={
                                  Object {
                                    "configureHeartbeatLink": <ForwardRef
                                      href="/app/kibana#/home/tutorial/uptimeMonitors"
                                      target="_blank"
                                    >
                                      <FormattedMessage
                                        defaultMessage="Configure Heartbeat"
                                        id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                        values={Object {}}
                                      />
                                    </ForwardRef>,
                                  }
                                }
                              >
                                <EuiLink
                                  href="/app/kibana#/home/tutorial/uptimeMonitors"
                                  target="_blank"
                                >
                                  <a
                                    className="euiLink euiLink--primary"
                                    href="/app/kibana#/home/tutorial/uptimeMonitors"
                                    rel="noopener noreferrer"
                                    target="_blank"
                                  >
                                    <FormattedMessage
                                      defaultMessage="Configure Heartbeat"
                                      id="xpack.uptime.emptyState.configureHeartbeatLinkText"
                                      values={Object {}}
                                    >
                                      Configure Heartbeat
                                    </FormattedMessage>
                                  </a>
                                </EuiLink>
                                 to start logging uptime data.
                              </FormattedMessage>
                            </p>
                          </div>
                        </EuiText>
                      </span>
                    </EuiTextColor>
                  </div>
                </EuiEmptyPrompt>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </DataMissing>
</EmptyStateComponent>
`;

exports[`EmptyState component renders child components when count is truthy 1`] = `
<Fragment>
  <div>
    Foo
  </div>
  <div>
    Bar
  </div>
  <div>
    Baz
  </div>
</Fragment>
`;

exports[`EmptyState component renders error message when an error occurs 1`] = `
<EmptyStateComponent
  errors={
    Array [
      [error: There was an error fetching your data.],
    ]
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  loading={false}
  statesIndexStatus={null}
>
  <EmptyStateError
    errors={
      Array [
        [error: There was an error fetching your data.],
      ]
    }
  >
    <EuiFlexGroup
      justifyContent="center"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiPanel>
              <div
                className="euiPanel euiPanel--paddingMedium"
              >
                <EuiEmptyPrompt
                  body={
                    <React.Fragment>
                      <p>
                        There was an error fetching your data.
                      </p>
                    </React.Fragment>
                  }
                  iconColor="subdued"
                  iconType="securityApp"
                  title={
                    <EuiTitle
                      size="m"
                    >
                      <h3>
                        Error
                      </h3>
                    </EuiTitle>
                  }
                >
                  <div
                    className="euiEmptyPrompt"
                  >
                    <EuiIcon
                      color="subdued"
                      size="xxl"
                      type="securityApp"
                    >
                      <div
                        color="subdued"
                        data-euiicon-type="securityApp"
                        size="xxl"
                      />
                    </EuiIcon>
                    <EuiSpacer
                      size="s"
                    >
                      <div
                        className="euiSpacer euiSpacer--s"
                      />
                    </EuiSpacer>
                    <EuiTextColor
                      color="subdued"
                    >
                      <span
                        className="euiTextColor euiTextColor--subdued"
                      >
                        <EuiTitle>
                          <EuiTitle
                            className="euiTitle euiTitle--medium"
                            size="m"
                          >
                            <h3
                              className="euiTitle euiTitle--medium euiTitle euiTitle--medium"
                            >
                              Error
                            </h3>
                          </EuiTitle>
                        </EuiTitle>
                        <EuiSpacer
                          size="m"
                        >
                          <div
                            className="euiSpacer euiSpacer--m"
                          />
                        </EuiSpacer>
                        <EuiText>
                          <div
                            className="euiText euiText--medium"
                          >
                            <p
                              key="There was an error fetching your data."
                            >
                              There was an error fetching your data.
                            </p>
                          </div>
                        </EuiText>
                      </span>
                    </EuiTextColor>
                  </div>
                </EuiEmptyPrompt>
              </div>
            </EuiPanel>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </EmptyStateError>
</EmptyStateComponent>
`;

exports[`EmptyState component renders loading state if no errors or doc count 1`] = `
<EmptyStateComponent
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  loading={true}
  statesIndexStatus={null}
>
  <EmptyStateLoading>
    <EuiEmptyPrompt
      body={
        <React.Fragment>
          <EuiLoadingSpinner
            size="xl"
          />
          <EuiSpacer />
          <EuiTitle
            size="l"
          >
            <h2>
              Loading…
            </h2>
          </EuiTitle>
        </React.Fragment>
      }
    >
      <div
        className="euiEmptyPrompt"
      >
        <EuiTextColor
          color="subdued"
        >
          <span
            className="euiTextColor euiTextColor--subdued"
          >
            <EuiText>
              <div
                className="euiText euiText--medium"
              >
                <EuiLoadingSpinner
                  size="xl"
                >
                  <span
                    className="euiLoadingSpinner euiLoadingSpinner--xLarge"
                  />
                </EuiLoadingSpinner>
                <EuiSpacer>
                  <div
                    className="euiSpacer euiSpacer--l"
                  />
                </EuiSpacer>
                <EuiTitle
                  size="l"
                >
                  <h2
                    className="euiTitle euiTitle--large"
                  >
                    Loading…
                  </h2>
                </EuiTitle>
              </div>
            </EuiText>
          </span>
        </EuiTextColor>
      </div>
    </EuiEmptyPrompt>
  </EmptyStateLoading>
</EmptyStateComponent>
`;
